samples/_failures_safe/1761607916_40c0b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c44c1d82.c:132:1: error: expected identifier or ‘(’ at end of input
  132 | int
      | ^~~
